# redefi-relay-node

./: Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: parachain-forkless-update-data.yml  parachain-forkless-update-nodata.yml  parachain-node-only-update.yml  relay-forkless-update-data.yml  relay-forkless-update-nodata.yml  relay-node-codestyle.yml  relay-node-only.yml
polkadot/: Cargo.toml
polkadot/node/primitives/src/: lib.rs
polkadot/node/service/: Cargo.toml
polkadot/node/service/src/: chain_spec.rs  eth_service.rs  fake_runtime_api.rs  lib.rs
polkadot/rpc/: Cargo.toml
polkadot/rpc/src/: ethereum.rs  lib.rs  service.rs
polkadot/runtime/rococo/: Cargo.toml
polkadot/runtime/rococo/src/: lib.rs
polkadot/runtime/rococo/src/ethereum/: mod.rs
polkadot/runtime/westend/: Cargo.toml
polkadot/runtime/westend/src/: lib.rs
polkadot/runtime/westend/src/ethereum/: mod.rs
