[package]
name = "polkadot-rpc"
version = "15.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Polkadot specific RPC functionality. (polkadot v1.14.0)"

[lints]
workspace = true

[dependencies]
jsonrpsee = { features = ["server"], workspace = true }
polkadot-primitives.workspace = true
polkadot-primitives.default-features = true
sc-client-api.workspace = true
sc-client-api.default-features = true
sp-blockchain.workspace = true
sp-blockchain.default-features = true
sp-keystore.workspace = true
sp-keystore.default-features = true
sp-runtime.workspace = true
sp-runtime.default-features = true
sp-api.workspace = true
sp-api.default-features = true
sp-application-crypto.workspace = true
sp-application-crypto.default-features = true
sp-consensus.workspace = true
sp-consensus.default-features = true
sp-consensus-babe.workspace = true
sp-consensus-babe.default-features = true
sp-consensus-beefy.workspace = true
sp-consensus-beefy.default-features = true
sc-chain-spec.workspace = true
sc-chain-spec.default-features = true
sc-rpc.workspace = true
sc-rpc.default-features = true
sc-rpc-spec-v2.workspace = true
sc-rpc-spec-v2.default-features = true
sc-consensus-babe.workspace = true
sc-consensus-babe.default-features = true
sc-consensus-babe-rpc.workspace = true
sc-consensus-babe-rpc.default-features = true
sc-consensus-beefy.workspace = true
sc-consensus-beefy.default-features = true
sc-consensus-beefy-rpc.workspace = true
sc-consensus-beefy-rpc.default-features = true
sc-consensus-epochs.workspace = true
sc-consensus-epochs.default-features = true
sc-consensus-grandpa.workspace = true
sc-consensus-grandpa.default-features = true
sc-consensus-grandpa-rpc.workspace = true
sc-consensus-grandpa-rpc.default-features = true
sc-sync-state-rpc.workspace = true
sc-sync-state-rpc.default-features = true
sc-transaction-pool-api.workspace = true
sc-transaction-pool-api.default-features = true
substrate-frame-rpc-system.workspace = true
substrate-frame-rpc-system.default-features = true
mmr-rpc.workspace = true
mmr-rpc.default-features = true
pallet-transaction-payment-rpc.workspace = true
pallet-transaction-payment-rpc.default-features = true
sp-block-builder.workspace = true
sp-block-builder.default-features = true
substrate-state-trie-migration-rpc.workspace = true
substrate-state-trie-migration-rpc.default-features = true

sp-session = { workspace = true, default-features = false }
sc-service = { workspace = true }
sp-offchain = { workspace = true, default-features = false }
sp-inherents = { workspace = true }
sp-transaction-pool = { workspace = true }
sc-transaction-pool = { workspace = true }
sc-network = {workspace = true }
sc-network-sync = { workspace = true }
pallet-transaction-payment-rpc-runtime-api = { workspace = true, default-features = false }

# Ethereum (Frontier)
fc-api = { default-features = false, git = "https://github.com/uniquenetwork/unique-frontier", branch = "unique-polkadot-v1.14.0" }
fc-consensus = { git = "https://github.com/uniquenetwork/unique-frontier", branch = "unique-polkadot-v1.14.0" }
fc-db = { default-features = false, git = "https://github.com/uniquenetwork/unique-frontier", branch = "unique-polkadot-v1.14.0" }
fc-mapping-sync = { git = "https://github.com/uniquenetwork/unique-frontier", branch = "unique-polkadot-v1.14.0" }
fc-rpc = { default-features = false, git = "https://github.com/uniquenetwork/unique-frontier", branch = "unique-polkadot-v1.14.0" }
fc-rpc-core = { default-features = false, git = "https://github.com/uniquenetwork/unique-frontier", branch = "unique-polkadot-v1.14.0" }
fp-storage = { default-features = false, git = "https://github.com/uniquenetwork/unique-frontier", branch = "unique-polkadot-v1.14.0" }
fp-rpc = { default-features = false, git = "https://github.com/uniquenetwork/unique-frontier", branch = "unique-polkadot-v1.14.0" }
